--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   "author": "Joshua S. Eagle <joshuaseagle@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "@types/tar": "^4.0.3",
-    "moment": "^2.24.0",
-    "tar": "^4.4.13",
-    "typescript": "^3.8.3"
+    "moment": "^2.27.0"
   },
   "devDependencies": {
+    "@types/tar": "^4.0.3",
     "eslint": "^6.8.0",
-    "ts-node-dev": "^1.0.0-pre.44"
+    "tar": "^4.4.13",
+    "ts-node-dev": "^1.0.0-pre.56",
+    "typescript": "^3.9.7"
   }
 }
